--- a/css/base.css
+++ b/css/base.css
@@ -2,7 +2,7 @@ body {
 	background-color: white;
 }
 
-#scene {
+.scene {
 	position: absolute;
 	border: 5px solid white;
 	background-color: black;
@@ -11,4 +11,11 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
+    width: 600px;
+    height: 600px;
+    display: none;
+}
+
+#game-scene {
+    display: block;
 }
