--- a/css/base.css
+++ b/css/base.css
@@ -45,12 +45,12 @@ body {
 	color: red;
 }
 
-#table-container {
+.table-container {
 	width: 100%;
 	height: 540px;
 }
 
-#hiscore-table {
+.hiscore-table {
 	color: white;
 	margin: 0 auto;
 	font-size: 16px;
@@ -60,11 +60,11 @@ body {
 	top: 20px;
 }
 
-#hiscore-table td, #hiscore-table th {
+.hiscore-table td, .hiscore-table th {
 	padding: 12px 35px;
 }
 
-#hiscore-table .this-hiscore {
+.hiscore-table .this-hiscore {
 	color: red;
 }
 
