--- a/css/base.css
+++ b/css/base.css
@@ -37,7 +37,7 @@ body {
 	color: white;
 	width: 100%;
 	text-align: center;
-	padding: 20px 0;
+	padding: 57.3px 0 0 0;
 }
 
 #start-scene  .button:hover, #hiscore-scene  .button:hover {
@@ -58,6 +58,7 @@ body {
 	text-align: center;
 	position: relative;
 	top: 20px;
+	height: 520px;
 }
 
 .hiscore-table td, .hiscore-table th {
