--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,12 @@
 body {
-	background-color: white;
+	background: #252525;
+	background-attachment: fixed !important;
+	background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #2a2a29), color-stop(100%, #1c1c1c));
+	background: -webkit-linear-gradient(#2a2a29, #1c1c1c);
+	background: -moz-linear-gradient(#2a2a29, #1c1c1c);
+	background: -o-linear-gradient(#2a2a29, #1c1c1c);
+	background: -ms-linear-gradient(#2a2a29, #1c1c1c);
+	background: linear-gradient(#2a2a29, #1c1c1c);
 }
 
 .scene {
